<resources>
    <string name="app_name">Wally</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name">Nikhil Verma</string>
    <string name="follow">Follow</string>
    <string name="description">My name is Nikhil Verma. I am a Tech enthusiast and Android developer. I love to code and make android apps. For further information, shoot me an email to my email id(provided below)</string>
    <string name="email_descp">Email Id:- nv5475609@gmail.com</string>
    <string name="downloadLocation">/WallPool/WallPool Downloads</string>
    <string name="intro_descp">Explore from wide variety of images and search from various categories.
        Images provided by Pixabay.com</string>

    <string name="no_result">No photos found</string>
    <string name="no_internet">No Internet Connection. Pls check your internet connection and try again by hitting the refresh button above</string>
    <string name="no_internet_only">No Internet Connection. Pls check your internet connection and try again</string>
    <string name="splash_descp">"All Images in this app are provided by</string>
    <string name="pixabay_name">(Pixabay.com)</string>
    <string name="link_name">(Click on above link to visit their website)</string>
    <string name="dive_in">Dive In</string>

</resources>
