<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.nikhilverma360.wallpaperapp.AboutActivity">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:alpha="0.6"
            android:scaleType="centerCrop"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </FrameLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description_tv"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@id/frame_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/frame_layout"
        app:layout_constraintTop_toBottomOf="@id/frame_layout"
        android:text="@string/description"
        android:textSize="15sp"
        android:fontFamily="monospace"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email_descp"
        app:layout_constraintEnd_toEndOf="@id/description_tv"
        app:layout_constraintStart_toStartOf="@id/description_tv"
        app:layout_constraintTop_toBottomOf="@id/description_tv"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/email_tv"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/follow"
        android:textSize="25sp"
        android:textStyle="italic"
        android:id="@+id/follow_tv"
        android:fontFamily="sans-serif-smallcaps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="373dp"
        app:layout_constraintTop_toBottomOf="@+id/email_tv"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/follow_tv"
        android:layout_marginStart="5dp">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:visibility="visible"
            android:layout_marginStart="8dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/fb_imgView"
            android:src="@drawable/fb"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:visibility="visible"
            android:layout_marginStart="8dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/github_icon"
            android:id="@+id/git_imgView"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>

</ScrollView>
